<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Sobre Mi"
        app:titleTextColor="@color/white">

        <ImageButton
            android:id="@+id/btChangeMode"
            style="@style/VisualModeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/icon_foreground"
            android:backgroundTint="@color/primary"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="end"/>

    </com.google.android.material.appbar.MaterialToolbar>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/card_background"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:gravity="start"
                        android:paddingHorizontal="16dp"
                        android:text="@string/description"
                        android:textSize="18sp" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:paddingHorizontal="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="16dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:layout_weight="1"
                            android:text="@string/experience_title"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/experience"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:paddingHorizontal="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="16dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:layout_weight="1"
                            android:text="@string/motivation_lvl_title"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/motivation_high"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:elevation="2dp"
                app:cardBackgroundColor="@color/card_background"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Algunos de mis Proyectos"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="300dp"
                            android:orientation="horizontal">

                            <androidx.fragment.app.FragmentContainerView
                                android:id="@+id/snakeFragmentContainer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <androidx.fragment.app.FragmentContainerView
                                android:id="@+id/timbermanFragmentContainer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <androidx.fragment.app.FragmentContainerView
                                android:id="@+id/gifFragmentContainer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <androidx.fragment.app.FragmentContainerView
                                android:id="@+id/jwtFragmentContainer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <androidx.fragment.app.FragmentContainerView
                                android:id="@+id/gameFragmentContainer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </HorizontalScrollView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:elevation="8dp"
        android:src="@drawable/contact_info"
        app:backgroundTint="@color/fabButton"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>